k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dust-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: dust-kube-ingress-ip-address
    networking.gke.io/managed-certificates: front-managed-cert,front-edge-managed-cert,connectors-managed-cert,connectors-edge-managed-cert,metabase-managed-cert
    networking.gke.io/v1beta1.FrontendConfig: "dust-frontendconfig"
    kubernetes.io/ingress.class: "gce"

spec:
  rules:
    - host: dust.tt
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: front-service
                port:
                  number: 80

    - host: front-edge.dust.tt
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: front-edge-service
                port:
                  number: 80

    - host: connectors.dust.tt
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: connectors-service
                port:
                  number: 80

    - host: metabase.dust.tt
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: metabase-service
                port:
                  number: 80
